--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,14 +22,14 @@ html {
 
 .image-container {
   overflow: hidden;
-  max-width: 100%;
 }
 
 .image-container img {
   display: block;
+  max-width: 100%;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 895px) {
   .main-content {
     top: 2.5625rem;
   }
@@ -83,7 +83,17 @@ header .mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 895px) {
+  nav li:last-child {
+    display: block;
+  }
+
+  header .content {
+    padding: 1rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
   header .desktop {
     display: none;
   }
@@ -107,39 +117,29 @@ header .mobile {
   header .mobile li {
     padding: 0;
   }
-
-  header .mobile .button {
-    padding: .1875rem .5rem;
-    background-color: #9dc20b;
-    line-height: 1.6;
-    color: white;
-  }
 }
 
 /* Sign Up Section */
 
 #sign-up-section {
   display: flex;
-  position: relative;
   justify-content: flex-start;
   align-items: flex-start;
-  background-image: url(/resources/images/banner-landingpage.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
- 
   height: 43.5rem;
-  padding-top: 10.625rem;
-  padding-bottom: 10.625rem ;
-  padding-left: 6.25rem;
+  background-image: url('../images/banner-landingpage.jpg');
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #sign-up-cta {
-  padding: 2rem 5rem 3.5rem 5rem;
+  position: relative;
+  top: 171px;
+  left: 10%;
+  padding: 0 5rem 2.5rem 5rem;
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
-  align-self: center;
- 
 }
 
 #sign-up-cta .content {
@@ -149,7 +149,6 @@ header .mobile {
   font-size: 1.25rem;
   line-height: 1.4;
   color: white;
-  
 }
 
 #sign-up-cta h1 {
@@ -176,10 +175,9 @@ header .mobile {
 #sign-up-cta .button {
   margin-top: 1.625rem;
   padding: 1.25rem 7.25rem;
-  font-weight:500;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 895px) {
   #sign-up-section {
     align-items: center;
     justify-content: center;
@@ -211,7 +209,7 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #sign-up-section {
     height: 20rem;
   }
@@ -229,13 +227,9 @@ header .mobile {
 
 #features-section {
   display: flex;
-  position: relative;
   justify-content: space-between;
   padding: 4rem 5%;
-  padding-bottom: 2.875rem;
   background-color: #f3f3f3;
-  height: 635px;
-  width: auto;
 }
 
 .feature {
@@ -243,19 +237,16 @@ header .mobile {
   padding: 2rem;
   margin: 0px 1.25rem;
   background-color: white;
-  padding-bottom: 2.5rem;
-  padding-right: 2.375rem;
-  position: center;
 }
 
 .feature .image-container {
-  margin: 0 auto;
   width: 90%;
   height: 65%;
+  margin: 0 auto;
 }
 
 .feature .content {
-  padding: 2.375rem;
+  padding: 2.5rem 0;
 }
 
 .feature h2 {
@@ -272,11 +263,19 @@ header .mobile {
   color: #4a4a4a;
 }
 
-@media only screen and (max-width: 890px) {
+@media only screen and (max-width: 895px) {
+  #features-section {
+    padding: 1rem;
+  }
+
+  .feature {
+    margin: 0px .5rem;
+    padding: 1rem;
+  }
+
   .feature h2 {
-    font-size: 1.125rem;
+    font-size: 2rem;
     line-height: 1.3;
-    font-weight: normal;
   }
 
   .feature h3 {
@@ -285,7 +284,7 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 600px) {
   #features-section {
     flex-flow: column;
     padding: 0;
@@ -295,6 +294,10 @@ header .mobile {
     margin: 0;
     padding: 1.25rem 1rem 0 1rem;
   }
+
+  .feature .content {
+    padding: 1.25rem 0 1.875rem 0;
+  }
 }
 
 /* Filters Section */
@@ -302,11 +305,10 @@ header .mobile {
 #filters-section {
   padding: 4rem 0;
   background-color: #4a4a4a;
-  position: relative;
 }
 
 #filters-section .content {
-  padding: 0.625rem;
+  padding: 0 .625rem;
   margin-bottom: 5rem;
 }
 
@@ -324,11 +326,12 @@ header .mobile {
 }
 
 #filters-section .images-container {
+  display: flex;
   max-width: 100%;
   padding: 0 1%;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 600px) {
   #filters-section {
     padding: 1.5rem 0 0 0;
   }
@@ -364,11 +367,14 @@ header .mobile {
   background-color: #f3f3f3;
 }
 
-#quotes-section .content{
-  padding: 5rem 0;
+#quotes-section .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem 1.5rem;
 }
 
-#quotes-section quote {
+#quotes-section .quote {
   padding-right: 1.875rem;
   font-family: "Palatino", serif;
   font-size: 1.875rem;
@@ -377,21 +383,28 @@ header .mobile {
   color: #4a4a4a;
 }
 
-#quotes-section quote-citation {
+#quotes-section .quote-citation {
   height: 1.875rem;
 }
 
-@media only screen and (max-width: 760px) {
-  #quotes-section content {
+@media only screen and (max-width: 895px) {
+  #quotes-section .content {
+    padding: 3rem 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #quotes-section .content {
+    flex-flow: column;
     padding: 1.875rem .625rem;
   }
 
-  #quotes-section quote {
+  #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
   }
 
-  #quotes-section quote-citation {
+  #quotes-section .quote-citation {
     display: block;
     padding-top: 1rem;
     margin: auto;
@@ -415,7 +428,7 @@ footer .copyright {
   flex-grow: 1;
 }
 
-@media only screen and (min-width: 760px) {
+@media only screen and (max-width: 600px) {
   footer .content {
     font-size: .625rem;
   }
