--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,8 @@ html {
 
 .main-content {
   position: relative;
-  top: 5.3125rem; /* To offset for fixed header. */
+  top: 5.3125rem;
+  /* To offset for fixed header. */
 }
 
 .center {
@@ -70,7 +71,7 @@ nav a {
   vertical-align: bottom;
   line-height: 1.6;
   font-size: 1rem;
-  font-weight:400;
+  font-weight: 400;
   color: #4A4A4A;
 }
 
@@ -88,20 +89,31 @@ header .mobile {
     display: none;
   }
 
-  header .tablet {
-      display: block;
-      width: 100%;
-  }
-
   header .mobile {
-      display: none;
-  }
-  nav li:last-child {
     display: block;
+    width: 100%;
   }
 
   header .content {
-    padding: 1rem 1rem;
+    padding: .5rem 0;
+  }
+
+  header .mobile ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+
+  header .mobile li {
+    padding: 0;
+  }
+
+  header .mobile .button {
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
   }
 }
 
